ecmascript/parser/tests/test262-error-references/fail/41bb6cfb5f18770c.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/41bb6cfb5f18770c.js:1:1
  |
1 | import { a as class } from 'foo'
  | ^^^^^^

